--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,17 +1,30 @@
 @import "compass/reset"
 
+$bg_color: black
+$inactive_color: #222
+$active_color: white
+
+$cell_width: 35px
+$cell_height: 36px
+$cell_font_size: 20px
+
+$width: $cell_width*11
+$height: $cell_height*10
+
+
+
 body
   background-color: black
 
 centerizer
   position: relative
-  height: 360px
-  width: 385px
+  height: $height
+  width: $width
   position: absolute
   left: 50%
   top: 50%
-  margin-left: -180px
-  margin-top: -192px
+  margin-left: - $height/2
+  margin-top: -$width/2
   display: table
 
 clock
@@ -20,12 +33,15 @@ clock
   text-align: center
 
   td
-    color: #222
+    color: $inactive_color
     font-family: sans-serif
-    font-size: 20px
+    font-size: $cell_font_size
 
-    width: 35px
-    height: 36px
+    width: $cell_width
+    height: $cell_height
     vertical-align: middle
     text-align: center
+
+    &.active
+      color: $active_color
 
