using coffescript for basic workflow.

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -27,7 +27,7 @@ centerizer
   margin-top: -$width/2
   display: table
 
-clock
+.clock
   display: table-cell
   vertical-align: middle
   text-align: center
