--- a/css/style.css
+++ b/css/style.css
@@ -82,13 +82,13 @@ centerizer {
 }
 
 /* line 30, ../sass/style.sass */
-clock {
+.clock {
   display: table-cell;
   vertical-align: middle;
   text-align: center;
 }
 /* line 35, ../sass/style.sass */
-clock td {
+.clock td {
   color: #222222;
   font-family: sans-serif;
   font-size: 20px;
@@ -98,6 +98,6 @@ clock td {
   text-align: center;
 }
 /* line 45, ../sass/style.sass */
-clock td.active {
+.clock td.active {
   color: white;
 }
