--- a/css/style.css
+++ b/css/style.css
@@ -89,15 +89,17 @@ centerizer {
 }
 /* line 35, ../sass/style.sass */
 .clock td {
-  color: #222222;
+  color: #0d0d0d;
   font-family: sans-serif;
-  font-size: 20px;
+  font-size: 26px;
   width: 35px;
   height: 36px;
   vertical-align: middle;
   text-align: center;
+  text-shadow: 0 0 2px #0d0d0d;
 }
-/* line 45, ../sass/style.sass */
+/* line 47, ../sass/style.sass */
 .clock td.active {
   color: white;
+  text-shadow: 0 0 5px white;
 }
