--- a/sass/style.sass
+++ b/sass/style.sass
@@ -23,8 +23,8 @@ centerizer
   position: absolute
   left: 50%
   top: 50%
-  margin-left: - $height/2
-  margin-top: -$width/2
+  margin-left: - $width/2
+  margin-top: - $height/2
   display: table
 
 .clock
