--- a/sass/style.sass
+++ b/sass/style.sass
@@ -58,6 +58,8 @@ centerizer
     color: $inactive_color
 
     font-size: 20px
+    text-shadow: 0 0 2px $inactive_color
 
     &.active
       color: $active_color
+      text-shadow: 0 0 5px $active_color
