--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,25 +2,26 @@
 
 $bg_color: black
 $active_color: white
-$inactive_color: darken($active_color, 95%)
+$inactive_color: darken($active_color, 85%)
 
-$cell_width: 35px
-$cell_height: 36px
-$cell_font_size: 26px
+$cell_width: 26px
+$cell_height: 27px
+$cell_font_size: 18px
 
 $width: $cell_width*11
 $height: $cell_height*10
 
-$dot_font_size: 20px
+$dot_font_size: 18px
 $dot_cell_size: 20px
-$dot_spacing: 50px
+$dot_spacing: 5px
 
 
 body
   background-color: black
+  width: 320px
+  height: 290px
 
 centerizer
-  position: relative
   height: $height
   width: $width
   position: absolute
